--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,8 @@ body{
 }
 .container{
   background-color: rgb(232, 231, 237);
-  justify-content: center;
   width: 50%;
-  margin-left: 26%;
-  margin-top: 2%;
+  margin: 50px auto;
   text-align: center;
   padding: 20px;
   position: relative;
@@ -27,10 +25,12 @@ input[type=text],select{
 }
  #add1{
   width: 15%;
+  height: 8vh;
+  font-size: 100%;
+  text-align: center;
   background-color: #4285F4;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+ 
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -39,7 +39,25 @@ input[type=text],select{
  #add1:hover{
   background-color: #2569d6;
  }
+
+ .listData{
+  font-size: 1rem;
+  color: black;
+  font-size: 1rem;
+  margin-left: 20px;
+  background-color: rgb(207, 221, 233);
+  font-weight: bold;
+  text-align: left;
+  padding-left: 30px;
+  width: 48%;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  border-radius: 10px;
+ }
+
  #remove1{
+  font-size: 70%;
+  text-align: center;
   width: 15%;
   position: absolute;
   background-color: #DB4437;
@@ -55,6 +73,7 @@ input[type=text],select{
   background-color: #c53a2d;
  }
  #removeall{
+  font-size: 1rem;
   position: relative;
   width:18%;
   background-color:#DB4437;
@@ -72,25 +91,174 @@ input[type=text],select{
  .header{
   width: 100%;
   color: rgb(135, 133, 133);
-  font-size: 36px;
+  font-size: 3.6rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  }
  
- .listData{
-  color: black;
-  font-size: 14px;
-  margin-left: 20px;
-  background-color: rgb(207, 221, 233);
-  font-weight: bold;
-  text-align: left;
-  padding-left: 30px;
-  width: 48%;
-  padding-bottom: 1%;
-  padding-top: 1%;
-  border-radius: 10px;
- }
  .btn-position{
   position: relative;
   left: 11%;
   top: -54px;
  }
+ 
+ @media(max-width:1000px){
+  body{
+  font-size: 80%;
+  }
+  .container{
+    width:70%;
+  }
+  
+  input[type=text],select{
+    width: 70%;
+    height: 5.5vh;
+    
+  }
+
+   #add1{
+    width: 20%;
+    height: 5.4vh;
+    
+   }
+   .listData{
+    width: 50%;
+   
+   }
+
+   #remove1{
+    width: 20%;
+    font-size: 110%;
+    margin: 22px;
+    
+   }
+
+   #removeall{
+    width:30%;
+    font-size: 100%;
+   
+   }
+ 
+}
+
+
+ @media(max-width:600px){
+  body{
+  font-size: 70%;
+  }
+  .container{
+    width:80%;
+  }
+
+  .header{
+    font-size: 400%;
+  }
+  
+  input[type=text],select{
+    height: 5vh;
+    
+  }
+
+   #add1{
+    height: 4.8vh;
+   }
+   .listData{
+    width: 50%;
+   
+   }
+
+   #remove1{
+    width: 25%;
+    font-size: 100%;
+    margin: 26px;
+    
+   }
+
+   #removeall{
+    width:30%;
+    font-size: 100%;
+   
+   }
+ 
+}
+ @media(max-width:400px){
+  body{
+  font-size: 70%;
+  }
+  .container{
+    width:80%;
+  }
+
+  .header{
+    font-size: 400%;
+  }
+  
+  input[type=text],select{
+    height: 5vh;
+    
+  }
+
+   #add1{
+    height: 4.8vh;
+   }
+   .listData{
+    width: 50%;
+   
+   }
+
+   #remove1{
+    width: 30%;
+    font-size: 100%;
+    margin: 26px;
+    
+   }
+
+   #removeall{
+    width:30%;
+    font-size: 100%;
+   
+   }
+ 
+}
+
+@media(max-width:300px){
+  body{
+  font-size: 70%;
+  }
+  .container{
+    width:100%;
+  }
+  .header{
+    font-size: 300%;
+  }
+  
+  input[type=text],select{
+    width:100%;
+    height: 4vh;
+    
+  }
+
+   #add1{
+    width:30%;
+    height: 3.9vh;
+   }
+   .listData{
+    width: 40%;
+   
+   }
+
+   #remove1{
+    width: 40%;
+    font-size: 100%;
+    margin: 26px;
+    
+   }
+
+   #removeall{
+    width:50%;
+    font-size: 100%;
+   
+   }
+
+  }
+
+
